# pynq-sdk

./: .gitignore  CLAUDE.md  README.md  TUTORIAL.md  pyproject.toml
pynq_instrument/: __init__.py  async_channel.py  cli.py  command_registry.py  discovery.py  dma_buffer.py  errors.py  hardware_backend.py  hislip.py  hislip_server.py  hislip_session.py  instrument.py  overlay_manager.py  param_parser.py  response_helpers.py  scpi_overlay.py  scpi_parser.py  scpi_standard.py  scpi_system.py
tests/: conftest.py  test_concurrent.py  test_hislip_server.py  test_integration.py  test_mdns_advertiser.py  test_overlay_manager.py  test_param_validation.py  test_response_helpers.py  test_scpi_parser.py
tools/: generate_profile.py
